plugins {
    id 'com.adarshr.test-logger' apply false
    id 'com.github.spotbugs' apply  false
    id 'org.kordamp.gradle.jdeps' apply false
    id "com.github.ben-manes.versions" apply false
    id "org.javamodularity.moduleplugin" apply false
}


subprojects {

    version = "1.0.3"

    apply plugin: 'com.adarshr.test-logger'
    apply plugin: 'com.github.ben-manes.versions'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: 'org.javamodularity.moduleplugin'
    apply plugin: 'org.kordamp.gradle.jdeps'

    sourceCompatibility = 11
    targetCompatibility = 11

    repositories {
        jcenter()
        mavenCentral()
        maven {
            name = "MBARI"
            url = uri("https://maven.pkg.github.com/mbari-org/maven")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }

    test {
        useJUnitPlatform()
        moduleOptions {
            runOnClasspath = true
        }
        testlogger {
            theme 'mocha' // task level
        }
    }

    ext {
        javafxVersion = "16"
    }

    dependencies {

        constraints {
            implementation 'com.auth0:java-jwt:3.18.1'
            implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
            implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.1'
            implementation 'com.github.ben-manes.caffeine:caffeine:3.0.1'
            implementation 'com.google.code.gson:gson:2.8.7'
            implementation 'com.google.inject:guice:5.0.1'
            implementation 'com.jfoenix:jfoenix:9.0.10'
            implementation 'com.squareup.okhttp3:logging-interceptor:3.14.4'
            implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
            implementation 'com.squareup.retrofit2:retrofit:2.9.0'
            implementation 'jakarta.activation:jakarta.activation-api:1.2.2'
            implementation 'com.typesafe:config:1.4.1'
            implementation 'de.jensd:fontawesomefx-commons:11.0'
            implementation 'de.jensd:fontawesomefx-materialicons:2.2.0-11'
            implementation 'eu.hansolo:Medusa:11.7'
            implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
            implementation 'io.reactivex.rxjava2:rxjavafx:2.11.0-RC34'
            implementation 'javax.inject:javax.inject:1'
            implementation 'javax.servlet:javax.servlet-api:4.0.1'
            implementation 'org.controlsfx:controlsfx:11.1.0'
            implementation 'org.glassfish.jersey.core:jersey-client:2.29'
            implementation 'org.kordamp.ikonli:ikonli-javafx:12.2.0'
            implementation 'org.kordamp.ikonli:ikonli-material-pack:12.2.0'
//            implementation 'org.mbari.m3:vars-blackmagic:0.0.2'
//            implementation 'org.mbari.vars:vars-avfoundation:2.2.4'
            implementation 'org.mbari.vcr4j:vcr4j-core:4.4.1.jre11'
            implementation 'org.mbari.vcr4j:vcr4j-jserialcomm:4.4.1.jre11'
            implementation 'org.mbari.vcr4j:vcr4j-rs422:4.4.1.jre11'
            implementation 'org.mbari.vcr4j:vcr4j-sharktopoda:4.4.1.jre11'
            implementation 'org.mbari.vcr4j:vcr4j-sharktopoda-client:4.4.1.jre11'
            implementation 'org.mbari:mbarix4j:2.0.5.jre11'
            implementation 'org.scijava:native-lib-loader:2.3.4'
            implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
            implementation 'org.slf4j:slf4j-jdk14:1.8.0-beta4'
            runtimeOnly 'ch.qos.logback:logback-classic:1.3.0-alpha4'
            runtimeOnly 'org.fusesource.jansi:jansi:1.18'
            runtimeOnly 'org.slf4j:slf4j-jdk14:1.8.0-beta4'
        }

        testCompileOnly 'junit:junit:4.13.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.1'


    }

    task tree(type: DependencyReportTask) {}

    spotbugs {
        ignoreFailures = true
    }

    jdepsReport {
        classpaths = ['compileClasspath', 'runtimeClasspath']
    }

    publishing {
        repositories {
           maven {
               name = "GitHubPackages"
               url = uri("https://maven.pkg.github.com/mbari-org/maven")
               credentials {
                   username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USER") ?: System.getenv("GITHUB_USERNAME")
                   password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
               }
           }
        }
        publications {
            // maven(MavenPublication) {
            //     groupId "org.mbari.vars"
            //     artifactId project.name
            //     from components.java
            // }
           gpr(MavenPublication) {
               groupId "org.mbari.vars"
               artifactId project.name
               from components.java
           }
        }
    }

}

